# research-ledger

./: .env.example  .gitignore  README.md  pyproject.toml
src/: __init__.py
src/embeddings/: jina_client.py
src/ingestion/: __init__.py  chunk_writer.py  chunker.py  document_parser.py  edgar_client.py  entities.py  pipeline.py
src/schemas/: entities.py
