[project]
name = "research-ledger"
version = "0.1.0"
description = "financial documents intelligence system"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "edgartools[ai]>=5.30.3",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "langchain-text-splitters>=1.1.2",
    "pymupdf>=1.27.2.3",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
]
